[metadata]
name = envault
version = 0.1.0
description = Encrypted local environment variable manager with team-sharing support via git-compatible diffs
long_description = file: README.md
long_description_content_type = text/markdown
author = envault contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    envault = envault.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
